A small correction for wrong margins in column mode for search view with columns

--- a/site/assets/css/j4x_rtl.css
+++ b/site/assets/css/j4x_rtl.css
@@ -422,3 +422,21 @@ div#fctoolbar .buttons {
 .fctoolbar_side_placement div#fctoolbar .buttons {
 	margin-bottom: 5px;
 }
+label#use_advsearch_options_lbl {
+	background: #ccc;
+}
+#flexicontent .col-search .select2-container,
+.select2-container {
+	width: 100%;
+	min-width: 100%;
+}
+#flexicontent .fc_filter_html .input-append .select2-container .select2-choices {
+	display: flex;
+	width: 100% !important;
+	min-width: 100% !important;
+	max-width: 100% !important;
+	margin-bottom: 15px !important;
+}
+#flexicontent .col-search button.btn.btn-success.button_go {
+	width: 50%;
+}
